tg-5058. [MEJORA] Input al lado del desplegable "Identidad de genéro" no tiene placeholder

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -23,7 +23,7 @@
 			"FULL_NAME": "Nombre completo",
 			"GENDER": "Sexo",
 			"GENDER_SELF_DETERMINATION": "Identidad de género",
-			"OTHER_SELF_PERCEIVED_GENDER": "Identidad de género",
+			"OTHER_SELF_PERCEIVED_GENDER_LABEL": "Especifique cuál",
 			"GENERAL_PRACTITIONER": "Médico de cabecera",
 			"IDENTIFICATION_TYPE": "Tipo de documento",
 			"IDENTIFICATION_NUMBER": "Nº de documento",
