--- a/front-end/apps/projects/hospital/src/assets/i18n/auth/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/auth/es-AR.json
@@ -42,7 +42,8 @@
 				"ENFERMERO_ADULTO_MAYOR": "Enfermero adulto mayor",
 				"ENFERMERO": "Enfermero",
 				"ADMINISTRADOR_INSTITUCIONAL_BACKOFFICE":  "Administrador institucional",
-				"ADMINISTRADOR_AGENDA": "Administrador de agenda"
+				"ADMINISTRADOR_AGENDA": "Administrador de agenda",
+				"ESPECIALISTA_EN_ODONTOLOGIA": "Especialista en Odontología"
 			}
 		}
 	}
