tg-5234 [FE] Agregar texto y botón para incluir o no los datos.

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -189,6 +189,12 @@
 							"REGISTRY_DATE": "Fecha registro"
 						}
 					}
+				},
+				"anthropometric_dialog": {
+					"ADD": "SI, INCLUIRLOS",
+					"DISCARD": "NO, DESCARTARLOS",
+					"DESCRIPTION": "Últimos datos antropométricos cargados previamente el {{date}} hs",
+					"QUESTION": "¿Desea incluirlos en la consulta? "
 				}
 			},
 			"problemas": {
