tg-5238 [MEJORA]  Falta tilde en placeholder "Descripción"

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -41,7 +41,7 @@
 				"RECOMENDADO": "*Recomendado",
 				"evolucion": {
 					"TITLE": "Evolución",
-					"DESCRIPCION": "Descripcion"
+					"DESCRIPCION": "Descripción"
 				},
 				"errors": {
 					"MOTIVO_OBLIGATORIO": "Motivo de consulta obligatorio",
