--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -121,6 +121,23 @@
 			"buttons": {
 				"DOWNLOAD_REPORTS": "Descargar informes"
 			}
+		},
+		"user_data": {
+			"TITLE": "Datos de usuario",
+			"USER_ID": "ID Usuario:",
+			"USERNAME": "Nombre de usuario:",
+			"LAST_ACCESS": "Último acceso:",
+			"ENABLE": "Habilitado",
+			"PENDING_DATA": "Nombre de usuario y contraseña pendientes",
+			"WITHOUT_USER": "Sin usuario",
+			"NO_INFO": "Sin información",
+			"buttons": {
+				"CREATE_USER": "CREAR USUARIO"
+			},
+			"messages": {
+				"SUCCESS": "El usuario se creó exitosamente",
+				"ERROR": "Error al crear el usuario"
+			}
 		}
 	}
 }
