tg-5264 [BE] Administrador institucional no puede editar usuarios con igual o mayor rol

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -137,9 +137,8 @@
             "messages": {
                 "SUCCESS": "El usuario se creó exitosamente",
                 "ERROR": "Error al crear el usuario",
-				"UPDATE_SUCCESS": "El usuario se actualizó exitosamente",
-				"UPDATE_ERROR": "Error al actualizar el usuario"
-            }
+				"UPDATE_SUCCESS": "El usuario se actualizó exitosamente"
+			}
         }
     }
 }
