--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -195,6 +195,12 @@
 					"DISCARD": "NO, DESCARTARLOS",
 					"DESCRIPTION": "Últimos datos antropométricos cargados previamente el {{date}} hs",
 					"QUESTION": "¿Desea incluirlos en la consulta? "
+				},
+				"vital_signs_dialog": {
+					"ADD": "SI, INCLUIRLOS",
+					"DISCARD": "NO, DESCARTARLOS",
+					"DESCRIPTION": "Últimos datos signos vitales cargados previamente el {{date}} hs",
+					"QUESTION": "¿Desea incluirlos en la consulta? "
 				}
 			},
 			"problemas": {
