--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -173,6 +173,12 @@
 					"HEIGHT": "Talla (cm)",
 					"WEIGHT": "Peso (kg)"
 				},
+				"previous-data": {
+					"ADD": "SI, CONSERVAR",
+					"DISCARD": "NO, DESCARTARLOS",
+					"ASK":"¿Desea incluirlos en la consulta?",
+					"CONTENT": "Hay datos antropométricos y/o signos vitales cargados previamente"
+				},
 				"alergias": {
 					"TITLE": "Alergias",
 					"ADD": "Agregar alergia",
