tg-5328 [FE] Crea un nuevo servicio y se agrega a la consulta ambulatoria la solicitud de referencia.

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -210,6 +210,10 @@
 					"DISCARD": "NO, DESCARTARLOS",
 					"DESCRIPTION": "Últimos datos signos vitales cargados previamente el {{date}} hs",
 					"QUESTION": "¿Desea incluirlos en la consulta? "
+				},
+				"solicitud-referencia": {
+					"TITLE": "Solicitud de referencia",
+					"ADD_REQUEST": "+ Agregar solicitud"
 				}
 			},
 			"problemas": {
