--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -186,3 +186,5 @@ date-dto.day.invalid = El día debe ser un valor entre 1 y 31
 date-dto.month.invalid = El mes debe ser un valor entre 1 y 12
 date-dto.year.invalid = El año no puede ser menor a 0
 
+####### Clinical specialty care line #######
+clinical-specialty.care-line.exists = La especialidad clínica ya está asociada a la línea de cuidado.
