--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -166,5 +166,5 @@ date-dto.day.invalid = Day field can't be less than 1
 date-dto.month.invalid = Month field must be between values 1 and 12
 date-dto.year.invalid = Year field can't be less than 0
 
-####### Clinical specialty care line #######
-clinical-specialty.care-line.exists = This clinical specialty is already registered in care line 
+####### Care Line Clinical Specialty #######
+care-line.clinical-specialty-exists = This clinical specialty is already asociated to care line
