tg-5350 [Mejora] Se debe ver en pop up "Si, incluirlos"

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -174,10 +174,10 @@
 					"WEIGHT": "Peso (kg)"
 				},
 				"previous-data": {
-					"ADD": "SI, CONSERVAR",
+					"ADD": "SI, INCLUIRLOS",
 					"DISCARD": "NO, DESCARTARLOS",
 					"ASK":"¿Desea incluirlos en la consulta?",
-					"CONTENT": "Hay datos antropométricos y/o signos vitales cargados previamente"
+					"CONTENT": "Hay datos antropométricos y/o signos vitales cargados previamente."
 				},
 				"alergias": {
 					"TITLE": "Alergias",
