tg-5448 [Mejora] Refactorizar pop-up para incluir o descartar datos previos en NUEVA CONSULTA.

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -178,7 +178,9 @@
 					"ADD": "SI, INCLUIRLOS",
 					"DISCARD": "NO, DESCARTARLOS",
 					"ASK":"¿Desea incluirlos en la consulta?",
-					"CONTENT": "Hay datos antropométricos y/o signos vitales cargados previamente."
+					"CONTENT_ANTHROMETRIC": "Hay datos antropométricos cargados previamente.",
+					"CONTENT_VITAL_SIGNS": "Hay signos vitales cargados previamente.",
+					"CONTENT": "Hay datos antropométricos y signos vitales cargados previamente."
 				},
 				"alergias": {
 					"TITLE": "Alergias",
