tg-5445 Fix Error 500 - Ver historia clínica externa
(cherry picked from commit c3391a174353ed2f3f3ab44fcc37b76468296d5a)

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -3,7 +3,8 @@
 		"bus-interoperabilidad": {
 			"TIMEOUT-MESSAGE": "Existe demora para obtener información externa, por favor consulte mas tarde",
 			"PACIENTE-NO-FEDERADO": "Este paciente no está federado en ninguna otra institución",
-			"PACIENTE-SIN-DATOS": "Este paciente no posee datos en la institución seleccionada"
+			"PACIENTE-SIN-DATOS": "Este paciente no posee datos en la institución seleccionada",
+			"INSTITUTION_LOADING_ERROR": "Error al comunicarse con el bus"
 		},
 		"home": {
 			"TITLE": "Historia Clínica",
