tg-5465. [FE] Mensaje de "el problema es reportable" debe captar nombre del problema dinamicamente

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -302,8 +302,7 @@
 					"CANCEL_BUTTON": "Cancelar"
 				},
 				"epidemiological_report": {
-					"DENGUE_DESCRIPTION": "El problema Dengue es reportable a nivel epidemiológico.",
-					"COVID_DESCRIPTION": "El problema Covid es reportable a nivel epidemiológico.",
+					"PROBLEM_DESCRIPTION": "El problema <b>{{ problemName }}</b> es reportable a nivel epidemiológico.",
 					"REPORT": "¿Desea reportarlo?",
 					"buttons": {
 						"CONFIRM_REPORT": "SI, REPORTARLO",
