tg-5467. [FE] Cambios y mejoras del desarrollo previo a raiz de cambios de los nuevos requisitos

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -303,10 +303,9 @@
 				},
 				"epidemiological_report": {
 					"PROBLEM_DESCRIPTION": "El problema <b>{{ problemName }}</b> es reportable a nivel epidemiológico.",
-					"REPORT": "¿Desea reportarlo?",
 					"buttons": {
-						"CONFIRM_REPORT": "SI, REPORTARLO",
-						"CANCEL_REPORT": "NO, OMITIRLO"
+						"CONFIRM_REPORT": "REPORTAR CASO",
+						"CANCEL_REPORT": "OMITIR"
 					}
 				}
 			},
