tg-5554 [FE] Agrega botón de contrarreferancia a la notificación

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -245,7 +245,8 @@
 				"REFERENCE_REQUEST": "REFERENCIA SOLICITADA",
 				"OMIT_REFERENCE": "Si no desea responder a la referencia y realizar una consulta independientemente seleccione 'Consulta clásica'.",
 				"DESCRIPTION": "Si no desea responder a la referencia y realizar una consulta independiente seleccione “Consulta clásica”.",
-				"NEW_CONSULTATION": "CONSULTA CLÁSICA"
+				"NEW_CONSULTATION": "CONSULTA CLÁSICA",
+				"COUNTERREFERENCE": "CONTRARREFERENCIA"
 			},
 			"problemas": {
 				"TAB_LABEL": "Problemas",
