tg-5556 [FE] Agrega interfaz y logica correspondientes al dock-popup.

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -248,6 +248,16 @@
 				"NEW_CONSULTATION": "CONSULTA CLÁSICA",
 				"COUNTERREFERENCE": "CONTRARREFERENCIA"
 			},
+			"counterreference": {
+				"TITLE": "Responder referencia",
+				"COUNTERREFERENCE": "Contrarreferencia",
+				"PLACEHOLDER_DESCRIPTION": "Descripción",
+				"CONFIRM_COUNTERREFERENCE": "Confirmar contrarreferencia",
+				"messages": {
+					"ERROR": "Error al guardar documento de contrarreferencia",
+					"SUCCESS": "El documento de contrarreferencia se guardó exitosamente"
+				}
+			},
 			"problemas": {
 				"TAB_LABEL": "Problemas",
 				"TITLE": "Problemas y evoluciones",
