tg-5547. [FE] Actualizar popup de clasificación manual para agregar el flujo de múltiples clasificaciones de un problema

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -322,6 +322,7 @@
 				"epidemiological_report": {
 					"PROBLEM_DESCRIPTION": "El problema <b>{{ problemName }}</b> es reportable a nivel epidemiológico.",
 					"CASE_CLASSIFICATION": "Clasificación del caso",
+					"MIN_ONE_REQUIRED_ERROR": "Se debe seleccionar alguna clasificación manual",
 					"buttons": {
 						"CONFIRM_REPORT": "REPORTAR CASO",
 						"CANCEL_REPORT": "OMITIR"
