tg-5634 Muestra estado de Snowstorm

--- a/front-end/apps/projects/hospital/src/assets/i18n/configuracion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/configuracion/es-AR.json
@@ -26,6 +26,14 @@
 			"confirm_dialog": {
 				"TITLE": "Restablecer"
 			}
+		},
+		"features": {
+			"TITLE": "Funcionalidad"
+		}
+	},
+	"ws": {
+		"snowstorm": {
+			"TITLE": "Snowstorm"
 		}
 	}
 }
