tg-5607 [FE] Agrega al dialogo de referencia la posibilidad de adjuntar archivos.

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -92,7 +92,8 @@
 				},
 				"messages": {
 					"ERROR": "Error al guardar documento de nueva consulta ambulatoria",
-					"SUCCESS": "El documento de consulta ambulatoria se guardó exitosamente"
+					"SUCCESS": "El documento de consulta ambulatoria se guardó exitosamente",
+					"ERROR_TO_UPDATE_FILES": "Error al guardar la solicitud de referencia"
 				},
 				"problemas": {
 					"buttons": {
@@ -236,7 +237,7 @@
 					"PLACEHOLDER_SPECIALITY": "Especialidad",
 					"PLACEHOLDER_INSTITUTION": "Institución",
 					"PLACEHOLDER_SUMMARY": "Resumen de referencia solicitada",
-					"ATTACH_FILE": "Adjuntar archivos",
+					"UPLOAD_FILES": "Adjuntar archivos",
 					"ADD_REFERENCE": "AGREGAR SOLICITUD"
 				}
 			},
