--- a/front-end/apps/projects/hospital/src/assets/i18n/configuracion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/configuracion/es-AR.json
@@ -31,6 +31,13 @@
 			"TITLE": "Funcionalidad"
 		}
 	},
+	"app": {
+		"gateway": {
+			"cubejs": {
+				"TITLE": "Tableros"
+			}
+		}
+	},
 	"ws": {
 		"snowstorm": {
 			"TITLE": "Snowstorm"
