tg-5644 [FE]Mostrar profesiones y especialidades

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -137,6 +137,10 @@
             "PENDING_DATA": "Nombre de usuario y contraseña pendientes",
             "WITHOUT_USER": "Sin usuario",
             "NO_INFO": "Sin información",
+			"WITHOUT_PROFESSIONS":"Sin profesiones asignadas.",
+			"LICENCE": "Matrícula:",
+			"PROFESSION": "Profesión:",
+			"SPECIALTY": "Especialidad:",
             "buttons": {
                 "CREATE_USER": "CREAR USUARIO",
 				"SET_ACCESS_DATA": "ESTABLECER DATOS DE ACCESO",
