tg-5108 Documentación de estructura

--- a/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
@@ -76,7 +76,7 @@
 		"footer_right": "Logo inferior derecho",
 		"footer_center": "Logo inferior central",
 		"footer_left": "Logo inferior izquierdo",
-		"app_logo": "App logo",
+		"app_logo": "Logo de la aplicación",
 		"sponsor_logo": "Sponsor logo"
 	}
 }
