tg-5687 [MEJORA] El botón "Agregar otra profesión /especialidad" debe verse con puntero y sombreado.

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -161,7 +161,7 @@
 			"SELECT_PROFESSION": "Seleccione profesión",
 			"SELECT_SPECIALTY": "Seleccione especialidad",
             "PROFESSION_SPECIALTY": "Profesión | Especialidad",
-			"ADD_ANOTHER_PROFESSION_AND_SPECIALTY": "+ Agregar otra profesión/especialidad",
+			"ADD_ANOTHER_PROFESSION_AND_SPECIALTY": "Agregar otra profesión/especialidad",
 			"messages": {
                 "SUCCESS": "Se guardaron correctamente los cambios en profesiones",
                 "ERROR": "Error al guardaron los cambios en profesiones"
