--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -291,7 +291,11 @@
 					"SPECIALTY": "Especialidad",
 					"PROFESSIONAL": "Profesional",
 					"EVOLUTION_NOTE": "Descripción/Resumen",
-					"CONSULTATION_DATE": "Fecha de consulta"
+					"CONSULTATION_DATE": "Fecha de consulta",
+					"REFERENCE_REQUEST": "referencia solicitada",
+					"CARE_LINE": "Línea de cuidado:",
+					"SPECIALTY": "Especialidad:",
+					"SUMMARY_REFERENCE": "Resumen de referencia"
 				},
 				"historical-problems-filters": {
 					"SPECIALTY": "Especialidad",
@@ -493,3 +497,4 @@
 		}
 	}
 }
+
