tg-5717 [FE] Agrega filtro para poder filtrar por referencias

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -301,7 +301,8 @@
 					"SPECIALTY": "Especialidad",
 					"PROFESSIONAL": "Profesional",
 					"PROBLEM": "Problema",
-					"CONSULTATION_DATE": "Fecha de consulta"
+					"CONSULTATION_DATE": "Fecha de consulta",
+					"REFERENCE_STATE": "Estado de referencia"
 				},
 				"external-clinical-history": {
 					"SPECIALTY": "Especialidad",
