tg-5768 [FE] Agrega interfaz y lógica para que se visualice la información de las contrarreferencias en el histórico de evoluciones

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -295,7 +295,9 @@
 					"REFERENCE_REQUEST": "referencia solicitada",
 					"CARE_LINE": "Línea de cuidado:",
 					"SPECIALTY": "Especialidad:",
-					"SUMMARY_REFERENCE": "Resumen de referencia"
+					"SUMMARY_REFERENCE": "Resumen de referencia",
+					"COUNTERREFERENCE": "Contrarreferencia",
+					"PROCEDURE": "Procedimientos:"
 				},
 				"historical-problems-filters": {
 					"SPECIALTY": "Especialidad",
