tg-5259 Se agrego la tilde a Religión en el formulario Nuevo Paciente

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -39,7 +39,7 @@
             "OTHER_LAST_NAMES": "Otros apellidos",
             "PAMI_DOCTOR": "Médico de PAMI",
             "PHONE_NUMBER": "Teléfono",
-            "RELIGION": "Religion",
+            "RELIGION": "Religión",
             "REQUIRED": "El campo es requerido",
             "REQUIRED_GENDER": "Género requerido",
             "SELECT": "Seleccionar",
