tg-5788 [FE] Crear card para mostrar roles e institución del profesional

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -176,6 +176,11 @@
                 "SUCCESS": "Se guardaron correctamente los cambios",
                 "ERROR": "Error al guardaron los cambios de roles"
 			}
+		},
+		"card_roles": {
+			"ROL_COLUMN": "Rol:",
+			"CLINIC_COLUMN": "Clínica:",
+			"WITHOUT_ROLES": "Sin roles asignados."
 		}
     }
 }
