tg-5891 [FE] Corregir estilos en componentes de login

--- a/front-end/apps/projects/hospital/src/assets/i18n/auth/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/auth/es-AR.json
@@ -10,6 +10,10 @@
 				"PASSWORD_PLACEHOLDER": "*****",
 				"PASSWORD_REQUIRED": "Debe ingresar su clave",
 				"SUBMIT": "INGRESAR"
+			},
+			"external": {
+				"TITLE": "Iniciar sesión",
+				"GO_TO_EXTERNAL_LOGIN": "Ingresar con OAuth"
 			}
 		},
 		"LOGOUT": "Cerrar Sesión",
