tg-5889 [BE] Modificar flujos de creacion y edicion de coberturas con cuit

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -171,3 +171,5 @@ care-line.clinical-specialty-exists = This clinical specialty is already asociat
 
 ####### Medical Coverage #######
 medical-coverage.rnos-duplicated = This Rnos is already associated with other medical coverage
+medical-coverage.cuit-duplicated = The CUIT is already associated with other medical coverage
+medical-coverage.invalid-cuit =  The CUIT must be numeric
