--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -191,3 +191,5 @@ care-line.clinical-specialty-exists = La especialidad clínica ya se encuentra a
 
 ####### Medical Coverage #######
 medical-coverage.rnos-duplicated =  El Rnos ya se encuentra asociado a otra cobertura médica
+medical-coverage.cuit-duplicated = El CUIT ya se encuentra asociado a otra cobertura médica
+medical-coverage.invalid-cuit =  El CUIT debe ser numérico
