tg-5912 [FE] Bloquear botón de editar roles si se intenta editar un administrador institucional.

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -138,6 +138,7 @@
             "WITHOUT_USER": "Sin usuario",
             "NO_INFO": "Sin información",
 			"WITHOUT_PROFESSIONS":"Sin profesiones asignadas.",
+			"NOT_HAVE_PERMISSIONS":"No posee permisos suficientes para editar a este usuario. Consulte con su Administrador.",
 			"LICENCE": "Matrícula:",
 			"PROFESSION": "Profesión:",
 			"SPECIALTY": "Especialidad:",
