tg-5899 [FE] Refactor del metodo que se encarga de subir los archivos de las referencias

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -93,7 +93,7 @@
 				"messages": {
 					"ERROR": "Error al guardar documento de nueva consulta ambulatoria",
 					"SUCCESS": "El documento de consulta ambulatoria se guardó exitosamente",
-					"ERROR_TO_UPDATE_FILES": "Error al guardar la solicitud de referencia"
+					"ERROR_TO_UPLOAD_FILES": "Error al guardar la solicitud de referencia"
 				},
 				"problemas": {
 					"buttons": {
