--- a/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
@@ -71,7 +71,10 @@
 		"ADD_HEALTH_INSURANCES": "Agregar obra social",
 		"ADD_PRIVATE_HEALTH_INSURANCES": "Agregar prepaga",
 		"NEW_HEALTH_INSURANCES": "Agregar nueva obra social",
-		"NEW_PRIVATE_HEALTH_INSURANCES": "Agregar nueva prepaga"
+		"NEW_PRIVATE_HEALTH_INSURANCES": "Agregar nueva prepaga",
+		"CUIT_LABEL": "CUIT",
+		"PLAN_LABEL": "Plan",
+		"AFFILIATE_NUMBER_LABEL": "Nro de afiliado"
 	},
 	"messages": {
 		"NO_DATA": "No hay información para mostrar"
