tg-5938 [FE] Refactor en editar roles en base al CR

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -179,8 +179,8 @@
 			}
 		},
 		"card_roles": {
-			"ROL_COLUMN": "Rol:",
-			"CLINIC_COLUMN": "Clínica:",
+			"ROL_COLUMN": "Rol",
+			"CLINIC_COLUMN": "Clínica",
 			"WITHOUT_ROLES": "Sin roles asignados."
 		}
     }
