tg-5946 No se pueden crear obras sociales con letras en los campos Rnos y se visualiza error cuando son dos obras sociales con mismo Rnos
(cherry picked from commit de7e3289c5e664640a3482649a352a7b6debe0fc)

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -168,3 +168,6 @@ date-dto.year.invalid = Year field can't be less than 0
 
 ####### Care Line Clinical Specialty #######
 care-line.clinical-specialty-exists = This clinical specialty is already asociated to care line
+
+####### Medical Coverage #######
+medical-coverage.rnos-duplicated = This Rnos is already associated with other medical coverage
