--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -188,3 +188,6 @@ date-dto.year.invalid = El año no puede ser menor a 0
 
 ####### Care Line Clinical Specialty #######
 care-line.clinical-specialty-exists = La especialidad clínica ya se encuentra asociada a la línea de cuidado
+
+####### Medical Coverage #######
+medical-coverage.rnos-duplicated =  El Rnos ya se encuentra asociado a otra cobertura médica
